added -Wall -Wextra -pedantic to makefiles

--- a/tektool/makefile
+++ b/tektool/makefile
@@ -1,5 +1,5 @@
 
-CFLAGS=-g -fsigned-char -l gpib -L/usr/local/lib
+CFLAGS=-g -fsigned-char -Wall -Wextra -pedantic -l gpib -L/usr/local/lib
 
 tektool : tektool.c
 #	gcc $(CFLAGS) tektool.c -o tektool
