--- a/tekfwtool/Makefile.target-bin
+++ b/tekfwtool/Makefile.target-bin
@@ -1,16 +1,22 @@
-CC=/cygdrive/c/mingw/bin/gcc
-CFLAGS=-Wextra -Wall -O2 -Wno-unused -ggdb
-M68K=m68k-elf-
+M68K=m68k-linux-gnu-
 M68KCC=$(M68K)gcc
-M68CCKFLAGS=-Wall -Wextra -Os -ggdb
+M68KCCFLAGS=-Wall -Wextra -ggdb -Wno-unused -Werror
 M68KOBJCOPY=$(M68K)objcopy
 M68KNM=$(M68K)nm
 
-all: tekfwtool.exe target.bin
 
+# get version and build time strings
+GIT_VERSION := "$(shell git describe --abbrev=7 --dirty --always --tags)"
+ifneq ($(GIT_VERSION), "")
+	CFLAGS += -DGIT_VERSION=\"$(GIT_VERSION)\"
+endif
+BUILD_TIME := "$(shell date -u "+%Y-%m-%d %H:%M:%S")"
+ifneq ($(BUILD_TIME), "")
+	CFLAGS += -DBUILD_TIME=\"$(BUILD_TIME)\"
+endif
 
-tekfwtool.exe:	tekfwtool.c target-procs.h
-		$(CC) $(CFLAGS) ./gpib-32.obj -o $@ tekfwtool.c
+M68KCCFLAGS += $(CFLAGS)
+
 
 target.bin:	target.elf
 		$(M68KOBJCOPY) -O binary $< $@
@@ -24,4 +30,4 @@ target-procs.h:	target.elf gen-procs.sh
 target.o:	target.c
 		$(M68KCC) $(M68KCCFLAGS) -c -o $@ $<
 clean:
-		rm -f tekfwtool.exe target.o target.elf target.bin
+		rm -f target.o target.elf
